--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@wdio/junit-reporter": "^7.10.1",
     "@wdio/local-runner": "^7.10.1",
     "@wdio/selenium-standalone-service": "^7.10.1",
-    "@wdio/spec-reporter": "^7.10.1"
+    "@wdio/spec-reporter": "^7.10.1",
+    "wdio-intercept-service": "^4.1.7"
   }
 }
